test/pos/multi-sorts.msmt_
; Sorts
(declare-sort Tree 0)

; Constants




; Uninterpreted Functions


; Qualifiers


; Well-formedness Constraints


;  Constraints
(constraint (forall ((_VV##1 Tree)(x Tree)) (=> (= _VV##1 x) (= _VV##1 x))))

