test/neg/baz.msmt_
; Sorts


; Constants




; Uninterpreted Functions


; Qualifiers


; Well-formedness Constraints


;  Constraints
(constraint (forall ((_VV##0 Int)) (=> (= _VV##0 6) False)))
(constraint (forall ((_VV##1 Int)(x Int)) (=> (and False (= _VV##1 x)) (= _VV##1 0))))

